// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enumeration should render with header in add state and list in default state 1`] = `
<div
  className="tc-enumeration"
>
  <header
    className="tc-enumeration-header"
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="New entry"
      type="text"
    />
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}
      >
        <use
          xlinkHref="#talend-check"
        />
      </svg>
    </button>
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}
      >
        <use
          xlinkHref="#talend-cross"
        />
      </svg>
    </button>
  </header>
  <ul
    className="tc-enumeration-items"
    onScroll={[Function]}
  >
    <div
      id="autoSizer"
    >
      <div
        aria-label="grid"
        className="ReactVirtualized__Grid ReactVirtualized__List tc-list-items"
        id={undefined}
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "boxSizing": "border-box",
            "direction": "ltr",
            "height": 30,
            "overflowX": "hidden",
            "overflowY": "auto",
            "position": "relative",
            "width": 30,
            "willChange": "transform",
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Grid__innerScrollContainer"
          style={
            Object {
              "height": 166,
              "maxHeight": 166,
              "maxWidth": 30,
              "overflow": "hidden",
              "pointerEvents": "",
              "position": "relative",
              "width": "auto",
            }
          }
        >
          <div
            className="tc-item-container toggle"
            style={
              Object {
                "height": 40,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              className="checkbox"
            >
              <label
                htmlFor="tc-enumeration-toggle-all"
              >
                <input
                  checked={false}
                  id="tc-enumeration-toggle-all"
                  onChange={undefined}
                  type="checkbox"
                />
                <strong>
                  All
                </strong>
              </label>
            </div>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 40,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="1-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-1-item"
                  >
                    <input
                      checked={false}
                      id="checkbox-1-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      Lorem ipsum dolor sit amet 0
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 82,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="2-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-2-item"
                  >
                    <input
                      checked={false}
                      id="checkbox-2-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      Lorem ipsum dolor sit amet 1
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 124,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="3-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-3-item"
                  >
                    <input
                      checked={false}
                      id="checkbox-3-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      Lorem ipsum dolor sit amet 2
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`Enumeration should render with header in default state and first item in edit mode, validate button disabled is disabled 1`] = `
<div
  className="tc-enumeration"
>
  <header
    className="tc-enumeration-header"
  >
    <strong>
      Values
    </strong>
    <div
      className="actions"
    >
      <button
        aria-describedby={42}
        className="btn btn-link"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="link"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          title={null}
        >
          <use
            xlinkHref="#talend-plus"
          />
        </svg>
      </button>
    </div>
  </header>
  <ul
    className="tc-enumeration-items"
    onScroll={[Function]}
  >
    <div
      id="autoSizer"
    >
      <div
        aria-label="grid"
        className="ReactVirtualized__Grid ReactVirtualized__List tc-list-items"
        id={undefined}
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "boxSizing": "border-box",
            "direction": "ltr",
            "height": 30,
            "overflowX": "hidden",
            "overflowY": "auto",
            "position": "relative",
            "width": 30,
            "willChange": "transform",
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Grid__innerScrollContainer"
          style={
            Object {
              "height": 166,
              "maxHeight": 166,
              "maxWidth": 30,
              "overflow": "hidden",
              "pointerEvents": "",
              "position": "relative",
              "width": "auto",
            }
          }
        >
          <div
            className="tc-item-container toggle"
            style={
              Object {
                "height": 40,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              className="checkbox"
            >
              <label
                htmlFor="tc-enumeration-toggle-all"
              >
                <input
                  checked={false}
                  id="tc-enumeration-toggle-all"
                  onChange={undefined}
                  type="checkbox"
                />
                <strong>
                  All
                </strong>
              </label>
            </div>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 40,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="1-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-0"
                  >
                    <input
                      checked={false}
                      id="checkbox-0"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <span>
                      <span
                        className="sr-only"
                      >
                        Lorem ipsum dolor sit amet 0
                      </span>
                    </span>
                  </label>
                </div>
                <input
                  autoFocus={true}
                  className="tc-enumeration-item-label"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  type="text"
                />
              </div>
              <div
                className="tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-check"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-cross"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 82,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="2-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-2-item"
                  >
                    <input
                      checked={false}
                      id="checkbox-2-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      Lorem ipsum dolor sit amet 1
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 124,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="3-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-3-item"
                  >
                    <input
                      checked={false}
                      id="checkbox-3-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      Lorem ipsum dolor sit amet 2
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`Enumeration should render with header in default state, list in default state and required component 1`] = `
<div
  className="tc-enumeration"
>
  <header
    className="tc-enumeration-header"
  >
    <strong>
      Values
      *
    </strong>
    <div
      className="actions"
    >
      <button
        aria-describedby={42}
        className="btn btn-link"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="link"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          title={null}
        >
          <use
            xlinkHref="#talend-plus"
          />
        </svg>
      </button>
    </div>
  </header>
  <ul
    className="tc-enumeration-items"
    onScroll={[Function]}
  >
    <div
      id="autoSizer"
    >
      <div
        aria-label="grid"
        className="ReactVirtualized__Grid ReactVirtualized__List tc-list-items"
        id={undefined}
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "boxSizing": "border-box",
            "direction": "ltr",
            "height": 30,
            "overflowX": "hidden",
            "overflowY": "auto",
            "position": "relative",
            "width": 30,
            "willChange": "transform",
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Grid__innerScrollContainer"
          style={
            Object {
              "height": 166,
              "maxHeight": 166,
              "maxWidth": 30,
              "overflow": "hidden",
              "pointerEvents": "",
              "position": "relative",
              "width": "auto",
            }
          }
        >
          <div
            className="tc-item-container toggle"
            style={
              Object {
                "height": 40,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              className="checkbox"
            >
              <label
                htmlFor="tc-enumeration-toggle-all"
              >
                <input
                  checked={false}
                  id="tc-enumeration-toggle-all"
                  onChange={undefined}
                  type="checkbox"
                />
                <strong>
                  All
                </strong>
              </label>
            </div>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 40,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="1-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-1-item"
                  >
                    <input
                      checked={false}
                      id="checkbox-1-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      Lorem ipsum dolor sit amet 0
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 82,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="2-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-2-item"
                  >
                    <input
                      checked={false}
                      id="checkbox-2-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      Lorem ipsum dolor sit amet 1
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 124,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="3-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-3-item"
                  >
                    <input
                      checked={false}
                      id="checkbox-3-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      Lorem ipsum dolor sit amet 2
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`Enumeration should render with header in search state and list in default state 1`] = `
<div
  className="tc-enumeration"
>
  <header
    className="tc-enumeration-header"
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
    />
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}
      >
        <use
          xlinkHref="#talend-check"
        />
      </svg>
    </button>
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}
      >
        <use
          xlinkHref="#talend-cross"
        />
      </svg>
    </button>
  </header>
  <ul
    className="tc-enumeration-items"
    onScroll={[Function]}
  >
    <div
      id="autoSizer"
    >
      <div
        aria-label="grid"
        className="ReactVirtualized__Grid ReactVirtualized__List tc-list-items"
        id={undefined}
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "boxSizing": "border-box",
            "direction": "ltr",
            "height": 30,
            "overflowX": "hidden",
            "overflowY": "auto",
            "position": "relative",
            "width": 30,
            "willChange": "transform",
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Grid__innerScrollContainer"
          style={
            Object {
              "height": 166,
              "maxHeight": 166,
              "maxWidth": 30,
              "overflow": "hidden",
              "pointerEvents": "",
              "position": "relative",
              "width": "auto",
            }
          }
        >
          <div
            className="tc-item-container toggle"
            style={
              Object {
                "height": 40,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              className="checkbox"
            >
              <label
                htmlFor="tc-enumeration-toggle-all"
              >
                <input
                  checked={false}
                  id="tc-enumeration-toggle-all"
                  onChange={undefined}
                  type="checkbox"
                />
                <strong>
                  All
                </strong>
              </label>
            </div>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 40,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="1-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-1-item"
                  >
                    <input
                      checked={false}
                      id="checkbox-1-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      <span>
                        <span>
                          <strong>
                            Lorem
                          </strong>
                           ipsum dolor sit amet 0
                        </span>
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 82,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="2-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-2-item"
                  >
                    <input
                      checked={false}
                      id="checkbox-2-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      <span>
                        <span>
                          <strong>
                            Lorem
                          </strong>
                           ipsum dolor sit amet 1
                        </span>
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 124,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="3-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-3-item"
                  >
                    <input
                      checked={false}
                      id="checkbox-3-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      <span>
                        <span>
                          <strong>
                            Lorem
                          </strong>
                           ipsum dolor sit amet 2
                        </span>
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`Enumeration should render with header in selected state with trash icon, and two items in selected mode 1`] = `
<div
  className="tc-enumeration"
>
  <header
    className="tc-enumeration-header"
  >
    <strong>
      Values
    </strong>
    <span>
      (2/3 selected)
    </span>
    <div
      className="actions"
    >
      <button
        aria-describedby={42}
        className="btn btn-link"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="link"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          title={null}
        >
          <use
            xlinkHref="#talend-plus"
          />
        </svg>
      </button>
    </div>
  </header>
  <ul
    className="tc-enumeration-items"
    onScroll={[Function]}
  >
    <div
      id="autoSizer"
    >
      <div
        aria-label="grid"
        className="ReactVirtualized__Grid ReactVirtualized__List tc-list-items"
        id={undefined}
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "boxSizing": "border-box",
            "direction": "ltr",
            "height": 30,
            "overflowX": "hidden",
            "overflowY": "auto",
            "position": "relative",
            "width": 30,
            "willChange": "transform",
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Grid__innerScrollContainer"
          style={
            Object {
              "height": 166,
              "maxHeight": 166,
              "maxWidth": 30,
              "overflow": "hidden",
              "pointerEvents": "",
              "position": "relative",
              "width": "auto",
            }
          }
        >
          <div
            className="tc-item-container toggle"
            style={
              Object {
                "height": 40,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              className="checkbox"
            >
              <label
                htmlFor="tc-enumeration-toggle-all"
              >
                <input
                  checked={false}
                  id="tc-enumeration-toggle-all"
                  onChange={undefined}
                  type="checkbox"
                />
                <strong>
                  All
                </strong>
              </label>
            </div>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 40,
                "width": "100%",
              }
            }
          >
            <li
              className="undefined tc-enumeration-item selected-item"
              id="1-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-1-item"
                  >
                    <input
                      checked={true}
                      id="checkbox-1-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      Lorem ipsum dolor sit amet 0
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 82,
                "width": "100%",
              }
            }
          >
            <li
              className="undefined tc-enumeration-item selected-item"
              id="2-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-2-item"
                  >
                    <input
                      checked={true}
                      id="checkbox-2-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      Lorem ipsum dolor sit amet 1
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 124,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="3-item"
            >
              <div
                className="checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    htmlFor="checkbox-3-item"
                  >
                    <input
                      checked={false}
                      id="checkbox-3-item"
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <span
                      className="undefined tc-enumeration-item-label"
                      tooltip={true}
                    >
                      Lorem ipsum dolor sit amet 2
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  aria-describedby={42}
                  className="btn btn-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`Enumeration should render with header without items 1`] = `
<div
  className="tc-enumeration"
>
  <header
    className="tc-enumeration-header"
  >
    <strong>
      Values
    </strong>
    <div
      className="actions"
    >
      <button
        aria-describedby={42}
        className="btn btn-link"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="link"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          title={null}
        >
          <use
            xlinkHref="#talend-plus"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    className="tc-enumeration-items"
  >
    <p>
      This list is empty, click on + to add a value.
    </p>
  </div>
</div>
`;
